new getBookingsSimple (getBookingsByStaffId doesnt return bookings without workspace owner)
